--- a/packages/vue/src/shared/tokens.css
+++ b/packages/vue/src/shared/tokens.css
@@ -66,7 +66,6 @@ a {
 
 :focus-visible {
   outline: 0;
-  box-shadow: var(--cw-focus-ring);
 }
 
 ::selection {
